--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -6,7 +6,7 @@
 	<%= menu_link 'Hands', hands_path, icon: 'people-fill', condition: Settings.hands_allow %>
 	<%= menu_link 'Announcements...', alerts_path, icon: 'bell-fill', remote: true %>
 	<%= menu_link 'Tests...', tests_path, icon: 'check', remote: true, condition: Settings.tests_present %>
-	<%= menu_link 'Set module...', edit_schedule_current_module_path(current_schedule), icon: 'calendar', remote: true, condition: !current_user.schedule.self_service %>
+	<%= menu_link 'Set module...', edit_schedule_current_module_path(current_schedule), icon: 'calendar', remote: true, condition: current_user.schedule.can_admin_set_module? %>
 <% end %>
 
 <% if current_user.accessible_schedules.many? %>
