--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div id="sidebar-content" class="collapse sidebar-collapse navbar-collapse p-3 px-lg-4">
+<div id="sidebar-content" class="collapse sidebar-collapse navbar-collapse">
 
 	<%# User registration form %>
 	
