--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -1,14 +1,26 @@
 // CSS for the navbar and the sidebar
 
-.brand-container
+#sidebar
 {
+	padding: 0;
+    overflow-y: auto;
+	width: 100%;
+}
+
+#sidebar-tools
+{
+	width: 100%;
+	padding: 0.5rem;
+
     display:flex;
-	width:100%;
+	-webkit-box-pack: justify !important;
+	justify-content: space-between !important;
 }
 
 .navbar-brand
 {
     line-height:normal;
+	padding:0;
 }
 
 #course-title
@@ -29,26 +41,56 @@
 	line-height:1.1;
 }
 
-#sidebar
-{
-	padding:0;
-    overflow-y:auto;
-	width:100%;
-}
-
 .navbar-dark .brand
 {
 	max-width:10em;
 	border-bottom:none;
 }
 
+#sidebar-content
+{
+	padding: 1rem;
+}
+
+
+@media (max-width: 767.98px)
+{
+	#sidebar-tools
+	{
+		background-color:#C2CBD9;
+	}
+	
+	#schedule-navbar-items
+	{
+		margin-top:1rem;
+	}
+	
+	#schedule-navbar-items > *
+	{
+		margin-right:0;
+		width:100%;
+	}
+}
+
+@media (min-width: 576px)
+{
+	#sidebar-tools
+	{
+	}
+}
+
 @media (min-width: 768px)
 {
     #sidebar
     {
+		display: block;
         position: fixed;
         top: 0;
         bottom: 0;
+		
+		-webkit-box-flex: 0;
+		flex: 0 0 33.3333333333%;
+		max-width: 33.3333333333%;
     }
     
     #sidebar .sidebar-collapse
@@ -57,31 +99,46 @@
         flex-direction:column;
     }
 	
+	#sidebar-tools
+	{
+		padding: 1rem;
+	}
+	
     // can be in sidebar or in navbar (latter is in full-width layout)
     .navbar-toggler
     {
         display: none;
     }
-}
-
-@media (max-width: 767.98px)
-{
-	#schedule-navbar-items
-	{
-		margin-top:1rem;
-	}
-	#schedule-navbar-items > *
-	{
-		margin-right:0;
-		width:100%;
-	}
-}
-
-@media (min-width: 768px)
-{
+	
 	#schedule-navbar-items > *
 	{
 		margin-right:1rem;
+	}
+	
+}
+
+@media (min-width: 992px)
+{
+	#sidebar-tools
+	{
+		padding: 1.5rem;
+		padding-left: 1.5rem;
+		padding-right: 1.5rem;
+	}
+	
+	#sidebar-content
+	{
+		padding: 1rem 1.5rem;
+	}
+}
+
+@media (min-width: 1200px)
+{
+	#sidebar
+	{
+		-webkit-box-flex: 0;
+		flex: 0 0 25%;
+		max-width: 25%;
 	}
 }
 
