--- a/app/views/layouts/boxes.html.erb
+++ b/app/views/layouts/boxes.html.erb
@@ -24,7 +24,7 @@
 			
 			<div id="sidebar" class="navbar navbar-light d-md-block col-md-<%= Settings.room_for_toc && 3 || 4 %> col-xl-3">
 
-				<div class="sidebar-tools justify-content-between">
+				<div id="sidebar-tools">
 					<%= render 'brand'%>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidebar-content" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
