--- a/app/views/grades/_edit.html.erb
+++ b/app/views/grades/_edit.html.erb
@@ -17,6 +17,9 @@
 		<%= link_to "Destroy Grade", grade_path(id: @grade.id, referer: request.referer), method: :delete, data: { confirm: "Sure? This deletes the grade completely, including internal info." }, class: 'btn btn-secondary ml-1' if @grade.persisted? %>
 		<%= link_to "Destroy Submit", submit_path(id: @submit.id, referer: request.referer), method: :delete, data: { confirm: "Sure? This removes proof of student submitting. If you want to delete the grade, just empty text field and save the grade." }, class: 'btn btn-secondary ml-1' if @submit %>
 		<% end %>
+		<% if current_user.admin? && @submit.pset.config['check'] %>
+		<%= link_to "Re-check", recheck_submit_path(id: @submit.id), method: :post, data: { confirm: "Sure?" }, class: 'btn btn-secondary ml-1' if @submit %>
+		<% end %>
 		<% if current_user.senior? %>
 		<% if @grade.persisted? %>
 		<%= link_to "Publish", grade_path(id: @grade.id, grade: { status: :published }), method: :put, remote: !local_assigns[:no_ajax], data: { confirm: "Sure?" }, class: 'btn btn-secondary ml-1' %>
