--- a/app/assets/stylesheets/includes/elements.scss
+++ b/app/assets/stylesheets/includes/elements.scss
@@ -98,3 +98,40 @@ span.bubble {
 	-moz-border-radius: 5px;
 	border-radius: 5px;
 }
+
+//****************************************************************************
+
+.blockgraph
+{
+	display: flex;
+	flex-flow: row wrap;
+	align-content: flex-start;
+}
+
+.blockgraph .block
+{
+	width: 1rem;
+	height: 1rem;
+	margin: 0.1rem;
+//	background-color: #797979;
+}
+
+.strength-0 { background-color: #FAFAFA;}
+.strength-1 { background-color: #DFDFDF;}
+.strength-2 { background-color: #CFCFCF;}
+.strength-3 { background-color: #c0c0c0;}
+.strength-4 { background-color: #B1B1B1;}
+.strength-5 { background-color: #A3A3A3;}
+.strength-6 { background-color: #949494;}
+.strength-7 { background-color: #878787;}
+.strength-8 { background-color: #797979;}
+
+.interesting.strength-0 { background-color: #EF7700;}
+.interesting.strength-1 { background-color: #DD6E00;}
+.interesting.strength-2 { background-color: #CE6700;}
+.interesting.strength-3 { background-color: #bf5f00;}
+.interesting.strength-4 { background-color: #AF5700;}
+.interesting.strength-5 { background-color: #A35100;}
+.interesting.strength-6 { background-color: #934900;}
+.interesting.strength-7 { background-color: #874300;}
+.interesting.strength-8 { background-color: #773b00;}
