--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -11,18 +11,13 @@
 </div>
 
 <% cache @student do %>
-
-<%= line_chart [
-{
-	name: "total",
-	data: @student.attendance_records.group_by_day(:cutoff, format: "%a %d-%m").count
-}
-# {
-# 	name: "local",
-# 	data: @student.attendance_records.where(local: true).group_by_day(:cutoff, format: "%a %d-%m").count
-# }
-], height: "150px", stacked: true %>
-
+<% @grouped_items = @items.group_by_day{ |i| i.updated_at } %>
+<div class="blockgraph">
+	<% @student.attendance_records.group_by_day(:cutoff).count.each do |date, strength| %>
+	<% @day_items = @grouped_items.select{|k,v| k==date}.collect{|k,v| v.collect{|ai| ai.short_description}}.flatten %>
+	<div class="block strength-<%= [strength,8].min %> <%= @day_items.any? && 'interesting' || '' %>" data-toggle="tooltip" data-placement="top" title="<%= date %> (<%= strength %>) <%= @day_items %>"></div>
+	<% end %>
+</div>
 <% end %>
 
 <div id="timeline" class="row">
