--- a/app/assets/stylesheets/includes/elements.scss
+++ b/app/assets/stylesheets/includes/elements.scss
@@ -112,8 +112,20 @@ span.bubble {
 {
 	width: 1rem;
 	height: 1rem;
-	margin: 0.1rem;
+	margin: 0.05rem;
 //	background-color: #797979;
+}
+
+.blockgraph .block.weekday
+{
+//	border: 0.1rem solid gray;
+//	margin-bottom: 0;
+}
+
+.blockgraph .block.weekend
+{
+	border: 0.1rem solid white;
+//	margin-bottom: 0;
 }
 
 .strength-0 { background-color: #FAFAFA;}
