--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -13,9 +13,9 @@
 <% cache @student do %>
 <% @grouped_items = @items.group_by_day{ |i| i.updated_at } %>
 <div class="blockgraph">
-	<% @student.attendance_records.group_by_day(:cutoff).count.each do |date, strength| %>
+	<% @student.attendance_by_day.each do |date, strength| %>
 	<% @day_items = @grouped_items.select{|k,v| k==date}.collect{|k,v| v.collect{|ai| ai.short_description}}.flatten %>
-	<div class="block strength-<%= [strength,8].min %> <%= @day_items.any? && 'interesting' || '' %>" data-toggle="tooltip" data-placement="top" title="<%= date %> (<%= strength %>) <%= @day_items %>"></div>
+	<div class="block strength-<%= [strength,8].min %> <%= @day_items.any? && 'interesting' || '' %> <%= !(1..5).include?(date.wday) && 'weekend' ||  '' %> " data-toggle="tooltip" data-placement="top" title="<%= date %> (<%= strength %>) <%= @day_items %>"></div>
 	<% end %>
 </div>
 <% end %>
