--- a/app/assets/stylesheets/includes/elements.scss
+++ b/app/assets/stylesheets/includes/elements.scss
@@ -134,7 +134,7 @@ span.bubble {
 }
 
 
-.strength-0 { background-color: #FAFAFA;}
+.strength-0 { background-color: #EFEFEF;}
 .strength-1 { background-color: #DFDFDF;}
 .strength-2 { background-color: #CFCFCF;}
 .strength-3 { background-color: #c0c0c0;}
