--- a/app/assets/stylesheets/includes/elements.scss
+++ b/app/assets/stylesheets/includes/elements.scss
@@ -111,8 +111,10 @@ span.bubble {
 
 .blockgraph .block
 {
-	width: 1rem;
+	width: 1.5rem;
 	height: 1rem;
+	margin-bottom: 0.4rem;
+//	flex-grow: 1;
 //	margin: 0.01rem;
 //	background-color: #797979;
 }
@@ -125,7 +127,7 @@ span.bubble {
 
 .block + .weekend
 {
-	margin-left: 0.4rem;
+	margin-left: 0.1rem;
 }
 
 .weekend + .weekend
