--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -15,7 +15,7 @@
 <div class="blockgraph">
 	<% @student.attendance_by_day.each do |date, strength| %>
 	<% @day_items = @grouped_items.select{|k,v| k==date}.collect{|k,v| v.collect{|ai| ai.short_description}}.flatten %>
-	<div class="block strength-<%= [strength,8].min %> <%= @day_items.any? && 'interesting' || '' %> <%= !(1..5).include?(date.wday) && 'weekend' ||  '' %> " data-toggle="tooltip" data-placement="top" title="<%= date %> (<%= strength %>) <%= @day_items %>"></div>
+	<div class="block strength-<%= [strength,8].min %> <%= @day_items.any? && 'interesting' || '' %> <%= !(1..5).include?(date.wday) && 'weekend' ||  '' %>" data-toggle="tooltip" data-placement="top" title="<%= date %> (<%= strength %>) <%= @day_items %>"><%= @day_items.join =~ /submit/ && 's' || '' %></div>
 	<% end %>
 </div>
 <% end %>
