--- a/app/views/schedules/schedules/_table.html.erb
+++ b/app/views/schedules/schedules/_table.html.erb
@@ -12,7 +12,7 @@
 		<% if params[:status] == 'registered' %>
 		<th class="rotate">Start date</th>
 		<% end %>
-		<th>Latest</th>
+		<!-- <th>Latest</th> -->
 	</tr>
 
 	<% users.each do |group, user_list|%>
@@ -35,7 +35,9 @@
 			<% end %>
 		</td>
 		
-		<td class="bar"><%= user.attendance %></td>
+		<!-- <td class="bar"><%= user.attendance %></td> -->
+		
+		<td style="white-space:nowrap"><%= progress_bar(user, user.items, class: 'small') %></td>
 		
 		<% if params[:totals] == 'true' %>
 		<td><%= user.attendance_records.count %></td>
@@ -48,7 +50,7 @@
 		<% end %>
 		
 
-		<td><%= time_ago_in_words(user.last_submitted_at) if user.last_submitted_at %></td>
+		<!-- <td><%= time_ago_in_words(user.last_submitted_at) if user.last_submitted_at %></td> -->
 
 
 <% 
