--- a/app/views/schedules/schedules/show.html.erb
+++ b/app/views/schedules/schedules/show.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: 'tabs' %>
-<%= render partial: 'table', locals: { users: @users, psets: @psets } %>
+<%= render partial: 'table', locals: { groups: @groups, psets: @psets } %>
 
 <script type="text/javascript" charset="utf-8">
 $(function()
