--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -6,13 +6,13 @@
 	<%= menu_link 'Hands', hands_path, icon: 'people-fill', condition: Settings.hands_allow %>
 	<%= menu_link 'Announcements...', alerts_path, icon: 'bell-fill', remote: true %>
 	<%= menu_link 'Tests...', tests_path, icon: 'check', remote: true, condition: Settings.tests_present %>
-	<%= menu_link 'Set module...', edit_schedule_current_module_path(current_schedule), icon: 'calendar', remote: true, condition: !current_user.schedule.self_service %>
+	<%= menu_link 'Set module...', edit_schedule_current_module_path(current_schedule), icon: 'calendar', remote: true, condition: current_user.schedule.can_admin_set_module? %>
 <% end %>
 
 <% if current_user.accessible_schedules.many? %>
 <%= menu_group 'Your schedules' do %>
 	<% Schedule.all.each do |s| %>
-	<%= menu_link s.name, user_assign_schedule_path(user_id: current_user.id, schedule_id: s.id), icon: (s==current_schedule ? 'check' : nil), method: :post %>
+	<%= menu_link s.name, [current_user, user: {schedule_id: s.id}], method: :patch, icon: (s==current_schedule ? 'check' : nil) %>
 	<% end %>
 <% end%>
 <% end %>
