--- a/app/views/items/_submit.html.erb
+++ b/app/views/items/_submit.html.erb
@@ -14,12 +14,12 @@ URL: <%= link_to submit.url, submit.url %>
 	</ul>
 </p>
 <% end %>
-<% if submit.has_feedback? %>
+<% if submit.has_auto_feedback? %>
 <%= link_to t("check_results"), profile_feedback_path(submit), class:"btn btn-secondary", data: { toggle:'modal', target:'#fb-modal', submit: submit.id } %>
 <% end %>
 
 <div id="fb-modal" class="fade modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">Automatic feedback</h5>
