use the right bootstrap class

--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -40,7 +40,7 @@ end %>
 
 <div class="mt-3 actions clearfix">
 	<%= render partial: 'alerts/back' %>
-	<%= f.submit class: 'btn btn-primary pull-right' %>
+	<%= f.submit class: 'btn btn-primary float-right' %>
 </div>
 
 <% end %>
