--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -41,9 +41,9 @@
 			<p class="nav-text">
 				<span id="schedule_name"><%= @current_module.name %></span>
 				<% if current_schedule.self_service %>
-				<span class="pull-right">
+				<span class="float-right">
 					<%= link_to icon('chevron-left').html_safe, profile_prev_path, method: :post, remote: true %>
-					<%= link_to icon('chevron-right').html_safe, profile_next_path, method: :post, remote: true %>
+					<%= link_to icon('chevron-right', class: 'mr-n1').html_safe, profile_next_path, method: :post, remote: true %>
 				</span>
 				<% end %>
 			</p>
