--- a/app/views/grades/_form.html.erb
+++ b/app/views/grades/_form.html.erb
@@ -20,7 +20,7 @@
 <% end %>
 
 <div class="form-group">
-	<span class="pull-right" data-toggle="tooltip" title="Use bullets * to separate points. Use `backticks` to insert code."><%= icon 'question-fill'%></span>
+	<span class="float-right" data-toggle="tooltip" title="Use bullets * to separate points. Use `backticks` to insert code."><%= icon 'question-fill'%></span>
 	<label for="grade_comments" class="control-label">Focus points </label>
 	<%= f.text_area :comments, class: 'form-control', rows: 10, autofocus:true %>
 </div>
