--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -33,7 +33,7 @@
 				<%= f.hidden_field :student_id %>
 				<p><%= f.text_area :text, size: "x3", class: "form-control" %></p>
 				<p>
-					<span class="pull-right">
+					<span class="float-right">
 					<%= f.submit "Add note", class: "btn btn-primary" %>
 					</span>
 				</p>
