--- a/app/views/grades/_summary.html.erb
+++ b/app/views/grades/_summary.html.erb
@@ -1,5 +1,5 @@
 <p>
-	<span class="badge badge-secondary pull-right"><%= @grade.status %></span>
+	<span class="badge badge-secondary float-right"><%= @grade.status %></span>
 	Grading <%= t(:by) %> <%= @grade.grader_name %> / 
 	First graded <%= @submit.first_graded %> /
 	Last changed <%= @submit.last_graded %>
