--- a/app/views/hands/hands/show.html.erb
+++ b/app/views/hands/hands/show.html.erb
@@ -4,7 +4,7 @@
 <% if @hand.helpline %><span class="glyphicon glyphicon-phone-alt text-danger"></span><% end %>
 <%= @hand.user.name %><% if @hand.user.group %> (<%= @hand.user.group.name %>)<% end %>
 <% if @hand.done %>
-<span class="badge pull-right">done</span>
+<span class="badge float-right">done</span>
 <% end %>
 <br>
 <small><%= @hand.location or "no location" %>, <%= time_ago_in_words(@hand.created_at) %> ago</small>
