--- a/app/assets/stylesheets/includes/content.scss
+++ b/app/assets/stylesheets/includes/content.scss
@@ -275,9 +275,8 @@ div.embed-float .embed
 
 @media (max-width: 768px)
 {
-	#content section + section, #content header + header, .alert
+	#content section + section, #content header + header
 	{
 		padding-top: 1em;
 	}
 }
-
