--- a/app/assets/stylesheets/includes/fonts.scss
+++ b/app/assets/stylesheets/includes/fonts.scss
@@ -32,43 +32,17 @@ section h2
 	padding-bottom:0.25em;
 }
 
-@media (max-width: 767.98px)
-{
-	h1
-	{
-		font-size:1.6rem !important;
-	}
-	
-	h2
-	{
-		margin-top:1em !important;
-		font-size:1.4rem;
-	}
-}
-
-@media (max-width: 991.98px)
-{
-	h1
-	{
-		font-size:2rem !important;
-	}
-	
-	h2
-	{
-		margin-top:1em !important;
-		font-size:1.4rem;
-	}
-}
 section h3
 {
-	font-weight:300;
+	font-size:1.6rem;
+	font-weight:500;
 	margin-top:2em;
 	margin-bottom:1em;
 }
 
 section h4, section h5
 {
-	font-size:20px;
+	font-size:1.5rem;
 	font-weight:400;
 	margin-top:1.5em;
 	margin-bottom:1em;
@@ -77,6 +51,41 @@ section h4, section h5
 section h4
 {
 	margin-top:1.5em;
+}
+
+@media (max-width: 767.98px)
+{
+	section h1
+	{
+		font-size:1.6rem !important;
+	}
+	
+	section h2
+	{
+//		margin-top:1em !important;
+		font-size:1.4rem;
+	}
+}
+
+@media (max-width: 991.98px)
+{
+	section h1
+	{
+		font-size:2rem !important;
+	}
+	
+	section h2
+	{
+		margin-top:1.5em !important;
+		font-size:1.6rem;
+	}
+
+	section h3
+	{
+		margin-top:1.5em !important;
+		font-size:1.3rem;
+		font-weight:500;
+	}
 }
 
 section table
