--- a/app/assets/stylesheets/includes/theme.scss
+++ b/app/assets/stylesheets/includes/theme.scss
@@ -89,6 +89,21 @@ background: linear-gradient(133deg, rgba(181,206,223,0.24637605042016806) 0%, rg
 	color:#8b9894;
 }
 
+// ensure that if we use columns in the timeline, and those collapse,
+// that there is still space between the card boxes
+#timeline div:not(:last-child) .card:last-child
+{
+	margin-bottom:30px;
+}
+
+// only horizontal th elements get centered, as well as td elements
+// the left-most th column is left-aligned
+#overview table th:not([scope=col]), #overview table td
+{
+	text-align: center;
+}
+
+
 .btn.btn-grayed
 {
 	color: #545454;
