--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
 					</div>
 				</div>
 
-				<div id="content" class="p-3 p-sm-4 px-lg-5 pb-md-3" <%= Settings.room_for_toc && "style=margin-right:17em;" || "" %>>
+				<div id="content" class="pt-3 px-3 pb-3 px-sm-4 pb-sm-4 px-lg-5 pb-lg-5" <%= Settings.room_for_toc && "style=margin-right:17em;" || "" %>>
 					<%= yield %>
 				</div>
 
