--- a/app/views/layouts/boxes.html.erb
+++ b/app/views/layouts/boxes.html.erb
@@ -69,7 +69,7 @@
 					</div>
 				</div>
 
-				<div id="content" class="px-3 px-md-4 px-xl-5 pb-md-3 pt-md-3" <%= Settings.room_for_toc && "style=margin-right:17em;" || "" %>>
+				<div id="content" class="pt-3 px-3 pb-3 px-sm-3 pb-sm-4 px-lg-5 pb-lg-5" <%= Settings.room_for_toc && "style=margin-right:17em;" || "" %>>
 					<%= yield %>
 				</div>
 
