re-enable form support: just add form fields to a submittable page and go

--- a/app/views/grading/_file_tabs.html.erb
+++ b/app/views/grading/_file_tabs.html.erb
@@ -1,3 +1,8 @@
+<% if @submit.has_form_response? %>
+<li class="nav-item">
+	<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-toggle="tab" href="#form-contents" role="tab">Form</a>
+</li>
+<% end %>
 <% @files.each_key do |filename| %>
 <li class="nav-item">
 	<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-toggle="tab" href="#file-<%= filename.parameterize %>" role="tab"><%= filename %></a>
@@ -5,6 +10,6 @@
 <% end if @files.present? %>
 <% if @submit.has_auto_feedback? %>
 <li class="nav-item">
-	<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-toggle="tab" href="#file-check" role="tab">check</a>
+	<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-toggle="tab" href="#file-check" role="tab">Check</a>
 </li>
 <% end %>
