--- a/app/views/application/_menu.html.erb
+++ b/app/views/application/_menu.html.erb
@@ -1,6 +1,6 @@
 <div class="dropdown ml-2">
 	<a href="#" class="bg-light rounded-pill p-2 dropdown-toggle" data-toggle="dropdown"><%= icon 'person-fill', size: '24x24', style: 'vertical-align:-6px;' %></a>
-	<% if logged_in? %>
+	<% if authenticated? %>
 	<div class="dropdown-menu dropdown-menu-right" id="user-menu">
 		<%= render partial: 'menu_items' %>
 	</div>
