--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -85,9 +85,10 @@
 <% if !current_user.valid_profile? %>
 	<script type="text/javascript">
 	$(function () {
-		$('#user-menu').dropdown('toggle');
+        // popup is disabled
+        // $('#user-menu').dropdown('toggle');
 		// $('#user-menu').dropdown('update');
-		return false;
+        // return false;
 	});
 	
 	$('.profile-form').click(function(e) {
