factor out a course settings model

--- a/app/assets/stylesheets/includes/framework.scss
+++ b/app/assets/stylesheets/includes/framework.scss
@@ -65,8 +65,7 @@ footer
 {
 	padding:1.5em;
 	text-align:center;
-	background-color: $color1;
-	color:white;
+	border-top: 1px solid #eee;
 	font-size:x-small;
 }
 
