--- a/app/views/home/_links.html.erb
+++ b/app/views/home/_links.html.erb
@@ -1,4 +1,4 @@
-<% links = Settings['course']['links'] %>
+<% links = Course.links %>
 
 <% links.each do |title, url|  %>
 <li><%= link_to title.html_safe, url %></li>
