--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
   <h1>Welcome!</h1>
   <p>This course website is empty.</p>
-  <p><%= link_to 'Claim', { action:'register' }, class: "btn btn-primary btn-lg" %></p>
+  <p><%= link_to 'Claim', { action:'register' }, class: "btn btn-primary btn-lg", data: { turbolinks: false } %></p>
 </div>
